--- a/.github/workflows/weixin-push-on-time.yml
+++ b/.github/workflows/weixin-push-on-time.yml
@@ -7,8 +7,8 @@ on:
   workflow_dispatch:
   schedule:
     # 每天国际时间 02:10 运行, 即北京时间 10:10 运行
-    #- cron: '55 01 * * *'
-     - cron: '1 2 02 * * * *'
+    - cron: '15 02 * * *'
+    
     
 jobs:
   build:
